--- a/universal.css
+++ b/universal.css
@@ -13,8 +13,6 @@ card {
         position: relative;
         transition: transform 1s;
         transform-style: preserve-3d;
-        transition: border-top 2s 
-                    border-bottom 2s;
 }
 
 .cardfront, .cardback {
@@ -62,4 +60,8 @@ card {
         transform: rotateY(180deg);
         border-top: 10px solid maroon;
         border-bottom: 6px solid maroon;
+
+        transition: border-top 2s 
+                    border-bottom 2s
+                    transform 1s;
 }
