--- a/universal.css
+++ b/universal.css
@@ -3,6 +3,8 @@
 html, body {
         font-family: "Space Mono", monospace;
         color: white;
+        width: 100%;
+        height: 100%;
 }
 
 card {
