--- a/universal.css
+++ b/universal.css
@@ -28,6 +28,10 @@ card {
   border-top: 10px solid orange;
   border-bottom: 6px solid orange;
 }
+.evilcardback {
+  border-top: 10px solid maroon;
+  border-bottom: 6px solid maroon;
+}
 .common {
         border-top: 10px solid slategray;
         border-bottom: 6px solid slategray;
@@ -48,10 +52,6 @@ card {
 .legendary {        
         border-top: 10px solid orange;
         border-bottom: 6px solid orange;
-}
-.evil {
-        border-top: 10px solid maroon;
-        border-bottom: 6px solid maroon;
 }
 .flipped {
         transform: rotateY(180deg);
