--- a/universal.css
+++ b/universal.css
@@ -63,17 +63,14 @@ card {
         padding-top: 10px;
 }
 
-
-/* START TOOLTIP STYLES */
 [tooltip] {
-        position: relative; /* opinion 1 */
+        position: relative;
       }
       
-      /* Applies to all tooltips */
       [tooltip]::before,
       [tooltip]::after {
-        text-transform: none; /* opinion 2 */
-        font-size: .9em; /* opinion 3 */
+        text-transform: none;
+        font-size: .9em;
         line-height: 1;
         user-select: none;
         pointer-events: none;
@@ -83,19 +80,14 @@ card {
       }
       [tooltip]::before {
         content: '';
-        border: 5px solid transparent; /* opinion 4 */
-        z-index: 1001; /* absurdity 1 */
+        border: 5px solid transparent;
+        z-index: 1001;
       }
       [tooltip]::after {
-        content: attr(tooltip); /* magic! */
+        content: attr(tooltip);
         
-        /* most of the rest of this is opinion */
         text-align: center;
         
-        /* 
-          Let the content set the size of the tooltips 
-          but this will also keep them from being obnoxious
-          */
         min-width: 3em;
         max-width: 21em;
         white-space: nowrap;
@@ -106,22 +98,19 @@ card {
         box-shadow: 0 1em 2em -.5em rgba(0, 0, 0, 0.35);
         background: #333;
         color: #fff;
-        z-index: 1000; /* absurdity 2 */
+        z-index: 1000;
       }
       
-      /* Make the tooltips respond to hover */
       [tooltip]:hover::before,
       [tooltip]:hover::after {
         display: block;
       }
       
-      /* don't show empty tooltips */
       [tooltip='']::before,
       [tooltip='']::after {
         display: none !important;
       }
       
-      /* FLOW: UP */
       [tooltip]:not([flow])::before,
       [tooltip][flow^="up"]::before {
         bottom: 100%;
@@ -140,7 +129,6 @@ card {
         transform: translate(-50%, -.5em);
       }
       
-      /* FLOW: DOWN */
       [tooltip][flow^="down"]::before {
         top: 100%;
         border-top-width: 0;
@@ -155,7 +143,6 @@ card {
         transform: translate(-50%, .5em);
       }
       
-      /* FLOW: LEFT */
       [tooltip][flow^="left"]::before {
         top: 50%;
         border-right-width: 0;
@@ -169,7 +156,6 @@ card {
         transform: translate(-.5em, -50%);
       }
       
-      /* FLOW: RIGHT */
       [tooltip][flow^="right"]::before {
         top: 50%;
         border-left-width: 0;
@@ -183,7 +169,6 @@ card {
         transform: translate(.5em, -50%);
       }
       
-      /* KEYFRAMES */
       @keyframes tooltips-vert {
         to {
           opacity: .9;
@@ -198,7 +183,6 @@ card {
         }
       }
       
-      /* FX All The Things */ 
       [tooltip]:not([flow]):hover::before,
       [tooltip]:not([flow]):hover::after,
       [tooltip][flow^="up"]:hover::before,
