--- a/universal.css
+++ b/universal.css
@@ -23,12 +23,14 @@ card {
         position: absolute;
         height: 100%;
         width: 100%;
+        box-sizing: border-box;
 }
-.evilcardfront {
+.evil .cardfront {
   border-top: 10px solid orange;
   border-bottom: 6px solid orange;
 }
-.evilcardback {
+
+.evil .cardback {
   border-top: 10px solid maroon;
   border-bottom: 6px solid maroon;
 }
