--- a/universal.css
+++ b/universal.css
@@ -8,22 +8,27 @@ html, body {
 }
 
 card {
-        width: calc(70px * 2);
-        height: calc(100px * 2);
-        background: #3b3b3b;
-        border-radius: 1em;
-        perspective: 600px;
-        position: relative;
-        transition: transform 1s;
-        transform-style: preserve-3d;
+  perspective: 600px;
+  transition: transform 1s;
+  transform-style: preserve-3d;
+  position: relative;
+  width: calc(70px * 2);
+  height: calc(100px * 2);
+  margin-right: 40px;
+  font-size: medium;
+  text-align: center;
 }
 
-.cardfront, .cardback {
-        backface-visibility: hidden;
-        position: absolute;
-        height: 100%;
-        width: 100%;
-        box-sizing: border-box;
+.cardfront,
+.cardback {
+  border-radius: 1em;
+  backface-visibility: hidden;
+  position: absolute;
+  height: 100%;
+  width: 100%;
+  background: #3b3b3b;
+  padding: 10px 0;
+  box-sizing: border-box;
 }
 .evil .cardfront {
   border-top: 10px solid orange;
@@ -34,35 +39,33 @@ card {
   border-top: 10px solid maroon;
   border-bottom: 6px solid maroon;
 }
-.common {
+.common > div {
         border-top: 10px solid slategray;
         border-bottom: 6px solid slategray;
 }
-.uncommon {
+.uncommon > div {
         border-top: 10px solid chartreuse;
         border-bottom: 6px solid chartreuse;
 }
-.rare {
+.rare > div {
         border-top: 10px solid dodgerblue;
         border-bottom: 6px solid dodgerblue;
 }
-.epic {
+.epic > div {
         border-top: 10px solid #9c20aa;
         border-bottom: 6px solid #9c20aa;
 }
 
-.legendary {        
+.legendary > div {        
         border-top: 10px solid orange;
         border-bottom: 6px solid orange;
 }
 .flipped {
-        transform: rotateY(180deg);
+  transform: rotateY(180deg);
 }
+
 .cardback {
-        transform: rotateY(180deg);
-        font-size: medium;
-        text-align: center;
-        padding-top: 10px;
+  transform: rotateY(180deg);
 }
 
 [tooltip] {
@@ -200,3 +203,4 @@ card {
       [tooltip][flow^="right"]:hover::after {
         animation: tooltips-horz 300ms ease-out forwards;
       }      
+      
